--- a/src/components/world/TileView.module.css
+++ b/src/components/world/TileView.module.css
@@ -1,10 +1,11 @@
 
 .tileView {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    font-size: 1.5em;
+    font-size: 2em;
     border: 2px solid #ddd;
     border-radius: 8px;
 
@@ -17,4 +18,11 @@
 .tileView:hover {
     transform: scale(1.1);
     transition: transform 0.05s ease-in-out;
+}
+
+.entities {
+    display: flex;
+    gap: 4px;
+
+    font-size: 0.6em;
 }
