--- a/src/components/screens/MainScreen.module.css
+++ b/src/components/screens/MainScreen.module.css
@@ -1,7 +1,7 @@
 
 .mainScreen {
     display: grid;
-    grid-template-columns: 1fr 400px;
+    grid-template-columns: 400px 1fr 400px;
 
     width: 100vw;
     height: 100vh;
@@ -27,4 +27,10 @@
     padding: 12px;
 
     overflow: hidden;
+}
+
+.sidebar.moves {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
 }
