--- a/src/components/sidebar/DetailsPanel.module.css
+++ b/src/components/sidebar/DetailsPanel.module.css
@@ -12,20 +12,54 @@
     overflow-y: hidden;
 }
 
+.container.collapsed .headerWrapper {
+    border-bottom: none;
+}
+
+.container.collapsed .header {
+    padding-bottom: 0;
+}
+
 .empty {
     text-align: center;
     color: #777;
 }
 
-.header {
-    padding-bottom: 4px;
+.headerWrapper {
+    display: flex;
+    justify-content: space-between;
 
     border-bottom: 1px solid #ddd;
+}
+
+.header {
+    flex: 1;
+    padding-bottom: 4px;
 
     font-size: 1.1em;
     font-weight: bold;
 }
 
+.toggleButton {
+    padding: 2px 6px;
+
+    color: #555;
+    background: none;
+    border: none;
+
+    font-size: 1em;
+
+    cursor: pointer;
+}
+
+.toggleButton:hover {
+    color: #000;
+}
+
 .body {
     overflow-y: auto;
+}
+
+.body.collapsed {
+    display: none;
 }
