feat: add select type support to PersistentField

--- a/src/components/util/PersistentField.module.css
+++ b/src/components/util/PersistentField.module.css
@@ -1,5 +1,10 @@
 
+.persistentField {
+    flex: 1;
+}
+
 .persistentField input:not([type="checkbox"]),
+.persistentField select,
 .persistentField textarea {
     width: 100%;
     box-sizing: border-box;
